<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="delete_all">Delete all</string>
    <string name="edit">Modifier</string>


    <string name="artist_created">Artist created</string>
    <string name="fill_fields">Please fill all fields</string>
    <string name="fill_field_artist">Please fill name field</string>
    <string name="plus_icon" />
    <string name="add_albums">Add album</string>
    <string name="add_artists">Add artiste</string>
    <string name="add_tracks">Add track</string>

    <string-array name="language_names">
        <item>English</item>
        <item>French</item>

    </string-array>
    <string-array name="language_keys">
        <item>en</item>
        <item>fr</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="albumTitle">Title</string>
    <string name="description">Description</string>
    <string name="title_activity_main">Main</string>

    <string name="app_name">Niu musicapp</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="albums">Albums</string>

    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="release_date">Release date</string>
    <string name="rate">Rating</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="name">Name</string>
    <string name="track">Track</string>
    <string name="duration">Duration</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="album_created">Album created</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="changeLang">Change Langage</string>
    <string name="settings_main">Language</string>
    <string name="header_language">Choose Language</string>
    <string name="noAlbumTitle">No album title</string>
    <string name="noArtistName">Unknow artist</string>
    <string name="fill_field_album">Please fill name</string>
    <string name="descriptionAlbum">Description album</string>

</resources>