<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <group
            android:id="@+id/music"
            android:checkableBehavior="single">
            <item
                android:id="@+id/albums"
                android:icon="@drawable/ic_album"
                android:title="@string/albums" />
            <item
                android:id="@+id/artists"
                android:icon="@drawable/ic_person"
                android:title="@string/artists" />
            <item
                android:id="@+id/tracks"
                android:icon="@drawable/ic_action_music_1"
                android:title="@string/tracks" />
        </group>
        <group
            android:id="@+id/add"
            android:checkableBehavior="single">


            <item
                android:id="@+id/add_albums"
                android:icon="@drawable/ic_action_add"
                android:title="@string/add_albums" />
        </group>
        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />


        </group>
    </group>


</menu>
