<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/orange">

    <TextView
        android:id="@+id/textViewArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/language"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/langRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/white"
            android:text="@string/english"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonFR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/white"
            android:text="@string/french"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/changeLangButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:text="@string/changeLang"
        android:textColor="@android:color/white" />

</LinearLayout>