<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/violet"
    >

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:padding="1dp"
        android:src="@drawable/musicapp_logo_black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <TextView
        android:id="@+id/detailsAlbumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noAlbumTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/detailsReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:text="@string/release_date"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/detailsArtistName"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/noArtistName"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        android:textSize="32sp" />


    <TextView
        android:id="@+id/detailsAlbumDesc"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/description"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/tracks"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent" >
        <include layout="@layout/tracks_list" />
        </RelativeLayout>

    </LinearLayout>




