<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/albumImageEdit"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/musicapp_logo_black"/>

        <ImageButton
            android:id="@+id/chgtImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addImageCoverAlbum"

            android:src="@drawable/ic_edit_black_24dp" />

        <TextView
            android:id="@+id/albumTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/editAlbumTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

  <!--      <TextView
            android:id="@+id/albumArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/artist" />
-->
        <TextView
            android:id="@+id/textViewReleaseDateEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date" />

        <EditText
            android:id="@+id/editAlbumReleaseDateEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textViewDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/editAlbumDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textViewNoteEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate" />

       <RatingBar
            android:id="@+id/ratingBarAlbumEdit"
            android:layout_width="339dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/buttonUpdateAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="udpateAlbum"/>

    </LinearLayout>

</ScrollView>